@@ -1,5 +1,12 @@
 2008-12-21  Nicolas Bruguier  <gandalfn@club-internet.fr>
 
+	* src/ccm-window.c (ccm_window_on_pixmap_damaged),
+	(ccm_window_get_pixmap):
+	  - Connect after pixmap damage signal to be sure plugin damage is done 
+	    before damage window.
+
+2008-12-21  Nicolas Bruguier  <gandalfn@club-internet.fr>
+
 	* plugins/shadow/ccm-shadow.c (ccm_shadow_on_pixmap_damage),
 	(ccm_shadow_window_resize):
 	* src/ccm-window.c (ccm_window_on_pixmap_damaged):
